# Polyglot

./: README.md  polyglot.pg
extensions/: Jeraldson.vscode-rusty-onedark-1.0.3.vsix  MikeyLau.typewriter-auto-scroll-1.1.3.vsix  jemc.vscode-implicit-indent-1.1.1.vsix
pest_typed_tree/: Cargo.toml
pest_typed_tree/src/: generate.rs
polyglot_parser/: Cargo.toml  rosetta.pg  test.pg  test.yml
polyglot_parser/src/: grammar.pest  lib.rs  main.rs  parser.rs  tree.rs
rust_polyglot/: .gitignore  Cargo.toml
rust_polyglot/src/: grammar.pest  main.rs
vs_syntax_highlighting/polyglot-syntax-highlighting/: README.md  package.json  polyglot-syntax-highlighting-0.0.1.vsix
vs_syntax_highlighting/polyglot-syntax-highlighting/syntaxes/: polyglot.tmLanguage.json
