[package]
name = "rust_polyglot"
version = "0.1.0"
edition = "2021"

[dependencies]
pest = "2.1.0"
pest_derive = "2.1.0"
clap = { version = "3.0.14", features = ["derive"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
pest-typed-tree = "0.2.1"
derive-new = "0.5.9"
serde_yaml = "0.8.23"
lazy_static = "1.4.0"
parking_lot = "0.12.0"
indexmap = { version = "1.8.0", features = ["serde"]}